--- a/homestyle.css
+++ b/homestyle.css
@@ -39,8 +39,31 @@ header li a {
 
 #imagenDeProducto{
   width: inherit;
+  margin-top: 1em;
 }
 #separadorDeProducto{
   overflow: hidden;
-  /* width:50%; */
+  background-color: silver;
+}
+#separadorDeProducto h3{
+  width:auto;  
+}
+#titulo-categorias  {
+  background-color: #CEF09D;
+  border: 1px solid #CEF09D;
+
+}
+img.categoria
+section li a, footer a {
+  text-decoration: none;
+  color: #CEF09D;
+}
+section li {
+  height: 3em;
+  background-color: #476C5E;
+  /* padding-top: 0.5em; */
+  padding-top: 0.3em;
+}
+footer {
+  background-color: #083643;
 }
