--- a/css/logincss.css
+++ b/css/logincss.css
@@ -23,3 +23,41 @@ footer a {
  text-decoration: none;
  color: #CEF09D;
 }
+
+/* login.html*/
+
+.row{
+ width: 100%;
+ height: 100%;
+ background-color: #B8ECD7;
+ margin-left: 5px;
+ margin-right: 5px;
+
+}
+ .login_page{
+    width: 80%;
+     height:80%;
+     background-color: #B1E001;
+     text-align: center;
+     margin-top: 10%;
+     margin-left: 10%;
+     margin-top:5px;
+
+           }
+login_container .logo{
+  width: 1px;
+  height: 1px;
+ }
+
+
+#exampleInputEmail1{
+ text-align: left;
+}
+
+#exampleInputPassword1{
+text-align: left;
+}
+
+#exampleCheck1{
+
+}
