--- a/css/registrocss.css
+++ b/css/registrocss.css
@@ -23,3 +23,71 @@ footer a {
  text-decoration: none;
  color: #CEF09D;
 }
+/*REGISTRATE.html*/
+
+.logo-header{
+  text-align: center;
+}
+
+.register{
+   width: 100%;
+   height:100%;
+   background-color: #B1E001;
+   text-align: center;
+}
+.form-group{
+  margin-left: 300px;
+  margin-right: 300px;
+}
+
+.Registracion{
+  background-color: #B8ECD7;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.btn-primary{
+margin-left: 420px;
+}
+
+.numeros_contacto{
+  width: 100%;
+  height: 60px;
+  background-color: #B1E001;
+  box-sizing: border-box;
+}
+.contactos{
+  width: 90%;
+  height: 60px;
+  padding-left: 300px;
+
+}
+.caja_contacto{
+  width: 80%;
+  height: 55px
+overflow: hidden;
+}
+.servicios{
+  float: left;
+  padding-left: 80px;
+  color: #083643;
+  text-align: center;
+}
+.container_redes{
+  width: 100%;
+  height: 100%;
+  background-color: #476C5E;
+  box-sizing: border-box;
+}
+.container-footer{
+  width: 90%;
+  height: 90%
+  }
+.caja_contacto_social{
+  width: 80%;
+  height: 80%
+  }
+.caja_contacto_social{
+  width: 70%;
+  height: 70%;
+ margin-left: 200px;
+}
