--- a/css/logincss.css
+++ b/css/logincss.css
@@ -26,7 +26,7 @@ footer a {
 
 /* login.html*/
 
-.row{
+.containerPrincipal{
  width: 100%;
  height: 100%;
  background-color: #B8ECD7;
@@ -44,7 +44,7 @@ footer a {
      margin-top:5px;
 
            }
-login_container .logo{
+.login_container .logo{
   width: 1px;
   height: 1px;
  }
