--- a/css/logincss.css
+++ b/css/logincss.css
@@ -22,26 +22,9 @@ body{
 .seccion{
   background-color: #dee2e6;
 }
-<<<<<<< Updated upstream
-footer a {
- text-decoration: none;
- color: #CEF09D;
-}
-
-/* login.html*/
-
-.containerPrincipal{
- width: 100%;
- height: 100%;
- background-color: #B8ECD7;
- margin-left: 5px;
- margin-right: 5px;
-
-=======
 .container{
  /* height: 100%; */
  background-color: #dee2e6;
->>>>>>> Stashed changes
 }
  .login_page{
      height:80%;
@@ -50,7 +33,7 @@ footer a {
      margin-top:5px;
 
            }
-.login_container .logo{
+login_container .logo{
   width: 1px;
   height: 1px;
  }
