--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,11 +1,14 @@
+*{
+  font-family: 'Roboto' , sans-serif;
+}
 header{
   overflow: hidden;
   background-color: #083643;
 
 }
-header h1 {
+header h1 a {
   color:#CEF09D;
-
+  text-decoration: none;
 }
 header li a {
   text-decoration: none;
@@ -37,7 +40,7 @@ footer a {
 }
 
 #total{
-  
+
   border: 1px solid #083643;
   color: #083643;
   background-color: #EAE8E8;
