--- a/css/faqcss.css
+++ b/css/faqcss.css
@@ -1,11 +1,14 @@
+*{
+  font-family: 'Roboto', sans-serif;
+}
 header{
   overflow: hidden;
   background-color: #083643;
   border-radius:
 }
-header h1 {
+header h1 a{
   color:#CEF09D;
-
+  text-decoration: none;
 }
 header li a {
   text-decoration: none;
