--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -54,7 +54,7 @@ header li a {
 #titulo-categorias  {
   background-color: #CEF09D;
   border: 1px solid #CEF09D;
-
+  color: #083643;
 }
 h2 a {
   text-decoration: none;
